--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1,3 +1,4 @@
 {
-  "app.containers.Home.changeLang": "Change Language"
+  "app.containers.Home.changeLang": "Change Language",
+  "app.containers.Home.webTitle": "Rainbow In Paper"
 }
