--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1,4 +1,7 @@
 {
+  "app.components.Button.cancel": "Cancel",
+  "app.components.Button.changeTheme": "Change Theme",
+  "app.components.Button.select": "Select Theme",
   "app.containers.Home.changeLang": "Change Language",
   "app.containers.Home.changeTheme": "Change Theme",
   "app.containers.Home.subTitle": "Is the invisible color a rainbow?",
